fix(h2): update line height on mobile view

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -301,7 +301,7 @@ p {
   margin-bottom: 15px; }
   @media (max-width: 767px) {
     .section-title h2 {
-      line-height: 41px; } }
+      line-height: 60px; } }
 
 .section-title p {
   font-size: 24px; }
